--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.2.0",
     "@prisma/client": "^6.12.0",
     "@vercel/kv": "^3.0.0",
+    "@tailwindcss/postcss": "^4",
     "argon2": "^0.43.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -31,13 +32,12 @@
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.2",
-    "tailwindcss": "^4"
+    "eslint-config-next": "15.4.2"
   }
 }
